--- a/data/tabular/solubility_aqsoldb/meta.yaml
+++ b/data/tabular/solubility_aqsoldb/meta.yaml
@@ -54,3 +54,16 @@ bibtex:
       title = {AqSolDB, a curated reference set of aqueous solubility
       and 2D descriptors for a diverse set of compounds},
       journal = {Scientific Data}
+templates:
+    - The name of the {#compound|drug|chemical|molecule!} with the {#SMILES|SMILES string|!} {SMILES#} is {compound_name#}.
+    - The {aqeuous_solubility__names__noun} of the {#compound|drug|chemical|molecule!} with the {SMILES__description} {SMILES#} is {aqeuous_solubility#}
+      {aqeuous_solubility__units}.
+    - The {aqeuous_solubility__names__noun} of the {#compound|drug|chemical|molecule!} with the {compound_name__names__noun} {compound_name#} is {aqeuous_solubility#}
+      {aqeuous_solubility__units}.
+    - |-
+      User: I want to {#design|discover|find|identify|!} a {#compound|drug|chemical|molecule!} with a particular {aqeuous_solubility__names__noun}.
+      Assistant: {#Cool, |Awesome, |Great, |That sounds interesting, |!}I would need to know the {aqeuous_solubility__names__noun} of the {#compound|drug|chemical|molecule!} you want to {#design|discover|find|identify|!}.
+      User: The {aqeuous_solubility__names__noun} should be {aqeuous_solubility#} {aqeuous_solubility__units}.
+      Assistant: I {#recommend|suggest|propose|advise|!} the {#compound|drug|chemical|molecule!} with the {SMILES__description} {SMILES#}. {#Is there anything else I can do for you?|Do you need anything else?|Anything else?|!}
+      User: {#Yes, |}I would like to know the {common_name__names__noun} of the {#compound|drug|chemical|molecule!}.
+      Assistant: The {common_name__names__noun} of the {#compound|drug|chemical|molecule!} with the {SMILES__description} {SMILES#} is {common_name#}.
