--- a/data/tabular/opv/meta.yaml
+++ b/data/tabular/opv/meta.yaml
@@ -117,49 +117,49 @@ bibtex:
       }
 templates:
     - |-
-      Question: What is the {PCE_ave__names__noun} of a {#non-fullerene|PC71BM|PCBM!} {#organic photovoltaics|OPV|organic solar cell|organic photovoltaics (OPV)!} device with a donor polymer with monomer SMILES {SMILES#} and {#Mw|weight-average molecular weight|weight-average molecular weight (Mw)!} {Mw#} g/mol and {#PDI|polydispersity index|polydispersity index (PDI)!} of {PDI#}?
+      Question: What is the {PCE_ave__names__noun} of a {#non-fullerene|PC71BM|PCBM!} {#organic photovoltaics|OPV|organic solar cell|organic photovoltaics (OPV)!} device with a donor polymer with monomer {SMILES__description} {SMILES#} and {#Mw|weight-average molecular weight|weight-average molecular weight (Mw)!} {Mw#} g/mol and {#PDI|polydispersity index|polydispersity index (PDI)!} of {PDI#}?
       Answer: {#The power conversion efficiency is |The PCE is!}{PCE_ave#} %.
     - |-
-      Question: What is the {Voc__names__noun} of a {#non-fullerene|PC71BM|PCBM!} {#organic photovoltaics|OPV|organic solar cell|organic photovoltaics (OPV)!} device with a donor polymer with monomer SMILES {SMILES#} and {#Mw|weight-average molecular weight|weight-average molecular weight (Mw)!} {Mw#} g/mol and {#PDI|polydispersity index|polydispersity index (PDI)!} of {PDI#}?
+      Question: What is the {Voc__names__noun} of a {#non-fullerene|PC71BM|PCBM!} {#organic photovoltaics|OPV|organic solar cell|organic photovoltaics (OPV)!} device with a donor polymer with monomer {SMILES__description} {SMILES#} and {#Mw|weight-average molecular weight|weight-average molecular weight (Mw)!} {Mw#} g/mol and {#PDI|polydispersity index|polydispersity index (PDI)!} of {PDI#}?
       Answer: {#The open-circuit voltage is |The Voc is!}{Voc#} {Voc__units}.
     - |-
-      Question: What is the {Jsc__names__noun} of a {#non-fullerene|PC71BM|PCBM!} {#organic photovoltaics|OPV|organic solar cell|organic photovoltaics (OPV)!} device with a donor polymer with monomer SMILES {SMILES#} and {#Mw|weight-average molecular weight|weight-average molecular weight (Mw)!} {Mw#} g/mol and {#PDI|polydispersity index|polydispersity index (PDI)!} of {PDI#}?
+      Question: What is the {Jsc__names__noun} of a {#non-fullerene|PC71BM|PCBM!} {#organic photovoltaics|OPV|organic solar cell|organic photovoltaics (OPV)!} device with a donor polymer with monomer {SMILES__description} {SMILES#} and {#Mw|weight-average molecular weight|weight-average molecular weight (Mw)!} {Mw#} g/mol and {#PDI|polydispersity index|polydispersity index (PDI)!} of {PDI#}?
       Answer: {#The short-circuit current density is |The Jsc is!}{Jsc#} {Jsc__units}.
     - |-
-      Question: What is the {FF__names__noun} of a {#non-fullerene|PC71BM|PCBM!} {#organic photovoltaics|OPV|organic solar cell|organic photovoltaics (OPV)!} device with a donor polymer with monomer SMILES {SMILES#} and {#Mw|weight-average molecular weight|weight-average molecular weight (Mw)!} {Mw#} g/mol and {#PDI|polydispersity index|polydispersity index (PDI)!} of {PDI#}?
+      Question: What is the {FF__names__noun} of a {#non-fullerene|PC71BM|PCBM!} {#organic photovoltaics|OPV|organic solar cell|organic photovoltaics (OPV)!} device with a donor polymer with monomer {SMILES__description} {SMILES#} and {#Mw|weight-average molecular weight|weight-average molecular weight (Mw)!} {Mw#} g/mol and {#PDI|polydispersity index|polydispersity index (PDI)!} of {PDI#}?
       Answer: {#The fill factor is |The FF is !}{FF#}.
     - |-
-      Question: What is the {bandgap__names__noun} of a polymer with monomer SMILES {SMILES#}?
+      Question: What is the {bandgap__names__noun} of a polymer with monomer {SMILES__description} {SMILES#}?
       Answer: {#The bandgap is |The bandgap of the polymer is!}{bandgap#} {bandgap__units}.
     - |-
-      Question: What is the {HOMO__names__noun} of a polymer with monomer SMILES {SMILES#}?
+      Question: What is the {HOMO__names__noun} of a polymer with monomer {SMILES__description} {SMILES#}?
       Answer: The {HOMO__names__noun} {#of the polymer|!} is {HOMO#} {HOMO__units}.
     - |-
-      Question: What is the {LUMO__names__noun} of a polymer with monomer SMILES {SMILES#}?
+      Question: What is the {LUMO__names__noun} of a polymer with monomer {SMILES__description} {SMILES#}?
       Answer: The {LUMO__names__noun} {#of the polymer|!} is {LUMO#} {LUMO__units}.
     - The {#non-fullerene|PC71BM|PCBM!} {#organic photovoltaics|OPV|organic solar cell|organic photovoltaics (OPV)!} device with a donor polymer with monomer
-      SMILES {SMILES#} and {#Mw|weight-average molecular weight|weight-average molecular weight (Mw)!} {Mw#} g/mol and {#PDI|polydispersity index|polydispersity
-      index (PDI)!} of {PDI#} has a {PCE_ave__names__noun} of {PCE_ave#}%.
+      {SMILES__description} {SMILES#} and {#Mw|weight-average molecular weight|weight-average molecular weight (Mw)!} {Mw#} g/mol and {#PDI|polydispersity
+      index|polydispersity index (PDI)!} of {PDI#} has a {PCE_ave__names__noun} of {PCE_ave#}%.
     - The {#non-fullerene|PC71BM|PCBM!} {#organic photovoltaics|OPV|organic solar cell|organic photovoltaics (OPV)!} device with a donor polymer with monomer
-      SMILES {SMILES#} and {#Mw|weight-average molecular weight|weight-average molecular weight (Mw)!} {Mw#} g/mol and {#PDI|polydispersity index|polydispersity
-      index (PDI)!} of {PDI#} has a {Jsc__names__noun} of {Jsc#} {Jsc__units}.
+      {SMILES__description} {SMILES#} and {#Mw|weight-average molecular weight|weight-average molecular weight (Mw)!} {Mw#} g/mol and {#PDI|polydispersity
+      index|polydispersity index (PDI)!} of {PDI#} has a {Jsc__names__noun} of {Jsc#} {Jsc__units}.
     - The {#non-fullerene|PC71BM|PCBM!} {#organic photovoltaics|OPV|organic solar cell|organic photovoltaics (OPV)!} device with a donor polymer with monomer
-      SMILES {SMILES#} and {#Mw|weight-average molecular weight|weight-average molecular weight (Mw)!} {Mw#} g/mol and {#PDI|polydispersity index|polydispersity
-      index (PDI)!} of {PDI#} has a {FF__names__noun} of {FF#}.
+      {SMILES__description} {SMILES#} and {#Mw|weight-average molecular weight|weight-average molecular weight (Mw)!} {Mw#} g/mol and {#PDI|polydispersity
+      index|polydispersity index (PDI)!} of {PDI#} has a {FF__names__noun} of {FF#}.
     - |-
       User: I {#want to|would like to|aim to|wish to!} {#design|create|build!} {#non-fullerene|PC71BM|PCBM!} {#organic photovoltaics|OPV|organic solar cell|organic photovoltaics (OPV)!} device with a {PCE_ave__names__noun} of {PCE_ave#}%.
       Assistant: {#That's interesting.|Cool.|!} Do you have a donor polymer in mind?
-      User: Yes, I would like to use a polymer with monomer SMILES {SMILES#} and {#would like to|need to|must!} know the {PDI__names__noun} and {Mw__names__noun} of the polymer I should use.
+      User: Yes, I would like to use a polymer with monomer {SMILES__description} {SMILES#} and {#would like to|need to|must!} know the {PDI__names__noun} and {Mw__names__noun} of the polymer I should use.
       Assistant: {#I recommend|I suggest|I propose!} trying a {Mw__names__noun} of {Mw#} g/mol and a {PDI__names__noun} of {PDI#}.
     - |-
       User: I {#want to|would like to|aim to|wish to!} {#design|create|build!} {#non-fullerene|PC71BM|PCBM!} {#organic photovoltaics|OPV|organic solar cell|organic photovoltaics (OPV)!} device with a {PCE_ave__names__noun} of {PCE_ave#}%.
       Assistant: {#That's interesting.|Cool.|!} Do you have additional constraints?
       User: {#Yes, |Yeah, |Indeed, |!}I would like to have a {Jsc__names__noun} of {Jsc#} {Jsc__units}.
-      Assistant: {#I recommend|I suggest|I propose!} trying a {Mw__names__noun} of {Mw#} g/mol and {PDI__names__noun} of {PDI#} of a polymer with monomer SMILES {SMILES#}.
+      Assistant: {#I recommend|I suggest|I propose!} trying a {Mw__names__noun} of {Mw#} g/mol and {PDI__names__noun} of {PDI#} of a polymer with monomer {SMILES__description} {SMILES#}.
     - |-
       User: Can you {#recommend|suggest|propose!} a donor polymer for a {#non-fullerene|PC71BM|PCBM!} {#organic photovoltaics|OPV|organic solar cell|organic photovoltaics (OPV)!} device with a {PCE_ave__names__noun} of {PCE_ave#}% and a {Jsc__names__noun} of {Jsc#} {Jsc__units}?
-      Assistant: {#I recommend|I suggest|I propose!} trying a {Mw__names__noun} of {Mw#} g/mol and {PDI__names__noun} of {PDI#} of a polymer with monomer SMILES {SMILES#}.
+      Assistant: {#I recommend|I suggest|I propose!} trying a {Mw__names__noun} of {Mw#} g/mol and {PDI__names__noun} of {PDI#} of a polymer with monomer {SMILES__description} {SMILES#}.
     - |-
       Task: Predict the {PCE_ave__names__noun} of a {#non-fullerene|PC71BM|PCBM!} {#organic photovoltaics|OPV|organic solar cell|organic photovoltaics (OPV)!} device based on a description of the donor polymer.
-      Description: The donor polymer has monomer SMILES {SMILES#} and {#Mw|weight-average molecular weight|weight-average molecular weight (Mw)!} {Mw#} g/mol and {#PDI|polydispersity index|polydispersity index (PDI)!} of {PDI#}.
+      Description: The donor polymer has monomer {SMILES__description} {SMILES#} and {#Mw|weight-average molecular weight|weight-average molecular weight (Mw)!} {Mw#} g/mol and {#PDI|polydispersity index|polydispersity index (PDI)!} of {PDI#}.
       Solution: {#The power conversion efficiency is |The PCE is !}{PCE_ave#} %.
