--- a/data/tabular/rdkit_features/meta.yaml
+++ b/data/tabular/rdkit_features/meta.yaml
@@ -1,86 +1,86 @@
 ---
-name: rdkit_features
+names: rdkit_features
 description: |-
     Molecular descriptors computed using RDKit
 targets:
     - id: formula
-      type: composition
+      type: formula
       names:
-          - noun: composition
+          - noun: formula
           - noun: chemical formula
-          - noun: chemical composition
+          - noun: chemical formula
           - noun: molecular formula
     - id: NumHDonors
-      type: continuous
-      significant_digits: 0
-      name:
+      type: text
+      significant_digits: 1
+      names:
           - noun: number of hydrogen bond donors
           - noun: number of hydrogen bond donor sites
           - noun: count of hydrogen bond donors
     - id: NumHAcceptors
-      type: continuous
+      type: text
       significant_digits: 0
-      name:
+      names:
           - noun: number of hydrogen bond acceptors
           - noun: number of hydrogen bond acceptor sites
           - noun: count of hydrogen bond acceptors
     - id: NumHeteroatoms
       type: continuos
       significant_digits: 0
-      name:
+      names:
           - noun: number of heteroatoms
           - noun: count of heteroatoms
           - noun: heteroatom count
     - id: RingCount
-      type: continuous
+      type: text
       significant_digits: 0
-      name:
+      names:
           - noun: number of rings
           - noun: count of rings
           - noun: ring count
     - id: NumRotatableBonds
-      type: continuous
+      type: text
       significant_digits: 0
-      name:
+      names:
           - noun: number of rotatable bonds
           - noun: count of rotatable bonds
           - noun: rotatable bond count
     - id: NumAromaticBonds
-      type: continuous
+      type: text
       significant_digits: 0
-      name:
+      names:
           - noun: number of aromatic bonds
           - noun: count of aromatic bonds
           - noun: aromatic bond count
     - id: NumAcidGroups
-      type: continuous
+      type: text
       significant_digits: 0
-      name:
+      names:
           - noun: number of acid groups
           - noun: count of acid groups
           - noun: acid group count
     - id: NumBasicGroups
-      type: continuous
+      type: text
       significant_digits: 0
-      name:
+      names:
           - noun: number of basic groups
           - noun: count of basic groups
           - noun: basic group count
     - id: Apol
-      type: continuous
+      type: text
       significant_digits: 2
-      name:
+      names:
           - noun: sum of atomic polarizabilities
           - noun: total sum of atomic polarizabilities
     - id: MolLogP
-      type: continuous
+      type: text
       significant_digits: 2
-      name:
+      names:
           - noun: Wildman-Crippen LogP value computed using RDKit
           - noun: Wildman-Crippen LogP value
           - noun: LogP value computed using the Wildman-Crippen method
 benchmarks:
-    - name: WhiteLab
+    - names: WhiteLab
       link: https://huggingface.co/datasets/maykcaldas/smiles-transformers/viewer/default/train?p=9080867
       split_column: split
 identifiers:
@@ -93,7 +93,7 @@ links:
       description: Data source
 num_points: 1009179703
 templates:
-    - The {composition__names__noun} of the {#molecule|compound|chemical!} with {SMILES__description} {SMILES#} is {formula#}.
+    - The {formula__names__noun} of the {#molecule|compound|chemical!} with {SMILES__description} {SMILES#} is {formula#}.
     - The {NumHDonors__names__noun} of the {#molecule|compound|chemical!} with {SMILES__description} {SMILES#} is {NumHDonors#}.
     - The {NumHAcceptors__names__noun} of the {#molecule|compound|chemical!} with {SMILES__description} {SMILES#} is {NumHAcceptors#}.
     - The {NumHeteroatoms__names__noun} of the {#molecule|compound|chemical!} with {SMILES__description} {SMILES#} is {NumHeteroatoms#}.
@@ -105,13 +105,13 @@ templates:
     - The {Apol__names__noun} of the {#molecule|compound|chemical!} with {SMILES__description} {SMILES#} is {Apol#}.
     - The {MolLogP__names__noun} of the {#molecule|compound|chemical!} with {SMILES__description} {SMILES#} is {MolLogP#}.
     - |-
-      User: I want to {#design|create|make|synthesize|analyze!} a {#molecule|compound|chemical!} with a {composition__names__noun} of {composition#}.
+      User: I want to {#design|create|make|synthesize|analyze!} a {#molecule|compound|chemical!} with a {formula__names__noun} of {formula#}.
       Assistant: {#Cool, |Nice, |Interesting, |That's interesting, |That is a very interesting question, |!}Do you have some additional {#contraints|requirements|conditions|limitations|!}{# I should take into account| that help me narrow down the search| that I should consider| I should consider| I should take into account|!}?
       User: {#Yes, |Indeed, |Yeah, |Yea, |Yep, |!}I want the {NumHDonors__names__noun} to be {NumHDonors#}, the {NumHAcceptors__names__noun} to be {NumHAcceptors#}.
       Assistant: {#Then, |In that case, |In that situation, |In that scenario, |!}I {#recommend|suggest|propose|advise|!} the {#molecule|compound|chemical!} with {SMILES__description} {SMILES#}.
     - |-
-      Question: What is the {composition__names__noun} of the {#molecule|compound|chemical!} with {SMILES__description} {SMILES#}?
-      Answer: {composition#}.
+      Question: What is the {formula__names__noun} of the {#molecule|compound|chemical!} with {SMILES__description} {SMILES#}?
+      Answer: {formula#}.
     - |-
       Question: What is the {NumHDonors__names__noun} of the {#molecule|compound|chemical!} with {SMILES__description} {SMILES#}?
       Answer: {NumHDonors#}.
@@ -147,5 +147,5 @@ templates:
     - |-
       User: I want to {#design|create|make|synthesize|analyze!} a {#molecule|compound|chemical!} with a {NumHDonors__names__noun} of {NumHDonors#}, a {NumHAcceptors__names__noun} of {NumHAcceptors#} and a {MolLogP__names__noun} of {MolLogP#}.
       Assistant: {#Cool, |Nice, |Interesting, |That's interesting, |That is a very interesting question, |!}Do you have some additional {#contraints|requirements|conditions|limitations|!}{# I should take into account| that help me narrow down the search| that I should consider| I should consider| I should take into account|!}?
-      User: {#Yes, |Indeed, |Yeah, |Yea, |Yep, |!}I want the {composition__names__noun} to be {composition#}.
+      User: {#Yes, |Indeed, |Yeah, |Yea, |Yep, |!}I want the {formula__names__noun} to be {formula#}.
       Assistant: {#Then, |In that case, |In that situation, |In that scenario, |!}I {#recommend|suggest|propose|advise|!} the {#molecule|compound|chemical!} with {SMILES__description} {SMILES#}.
