--- a/data/tabular/SIDER/meta.yaml
+++ b/data/tabular/SIDER/meta.yaml
@@ -1,6 +1,6 @@
 ---
 name: SIDER
-description: Database of marketed drugs and adverse drug reactions (ADR), grouped into 25 system organ classes.
+description: Database of marketed drugs and adverse drug reactions (ADR), grouped into 24 system organ classes.
 identifiers:
     - id: SMILES
       type: SMILES
@@ -24,12 +24,6 @@ targets:
       names:
           - noun: eye disorders
           - noun: ophthalmic disorders
-    - id: investigations
-      description: investigations
-      type: boolean
-      names:
-          - noun: investigations
-          - noun: medical investigations
     - id: musculoskeletal_and_connective_tissue_disorders
       description: musculoskeletal and connective tissue disorders
       type: boolean
@@ -155,7 +149,7 @@ targets:
       type: boolean
       names:
           - noun: injury, poisoning and procedural complications
-          - noun: injuries, poisonings, and complications from procedures
+          - noun: injuries and poisonings
 license: CC BY 4.0
 links:
     - url: https://academic.oup.com/nar/article/44/D1/D1075/2502602?login=false
@@ -185,8 +179,6 @@ templates:
       a &a }{#potential cause|potential reason!} for {metabolism_and_nutrition_disorders__names__noun}.
     - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {SMILES__description} {#representation of |!}{SMILES#} is {eye_disorders#not
       a &a }{#potential cause|potential reason!} for {eye_disorders__names__noun}.
-    - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {SMILES__description} {#representation of |!}{SMILES#} is {investigations#not
-      a &a }{#potential cause|potential reason!} for {investigations__names__noun}.
     - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {SMILES__description} {#representation of |!}{SMILES#} is {musculoskeletal_and_connective_tissue_disorders#not
       a &a }{#potential cause|potential reason!} for {musculoskeletal_and_connective_tissue_disorders__names__noun}.
     - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {SMILES__description} {#representation of |!}{SMILES#} is {gastrointestinal_disorders#not
